--- a/src/info.css
+++ b/src/info.css
@@ -17,7 +17,7 @@
 }
 
 .img-next {
-  width: 10vh;
+  width: 9.7vh;
 }
 
 .text-days {
@@ -58,7 +58,7 @@
 
 .footer {
   display: grid;
-  grid-template-columns: 10% 90%;
+  grid-template-columns: 10% 80% 10%;
   grid-template-rows: 100%;
 }
 
@@ -93,7 +93,6 @@
   margin-top: 4vh;
   margin-bottom: 2vh;
   text-align: center;
-  padding-right: 10%;
 }
 
 #btn-data {
@@ -122,6 +121,72 @@
   border: none;
 }
 
+/* Unsplash */
+
+.user {
+  color: white;
+  margin: 2vh;
+  margin-right: 6vh;
+}
+
+.user-font {
+  font-size: 2vh;
+  font-style: italic;
+  float: right;
+  text-align: right;
+  opacity: 0.6;
+}
+
+.user-font a {
+  color: white;
+  opacity: 1;
+}
+
+.user-font a:hover {
+  color: bisque;
+}
+
+.download-icon {
+  margin: auto;
+  float: right;
+  width: 3.5vh;
+  opacity: 0.6;
+}
+
+.download-icon:hover {
+  cursor: pointer;
+  width: 3.8vh;
+  opacity: 0.8;
+}
+
+
+/* credits */
+.final {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: 100%;
+  margin: auto;
+}
+
+.credits {
+  justify-content: center;
+  text-align: center;
+  font-size: 1.8vh;
+  opacity: 0.4;
+}
+
+.credits a {
+  color: white;
+}
+
+.credits a:hover {
+  color: bisque;
+}
+
+.hidden-credit {
+  opacity: 0;
+}
+
 .hidden {
   display: none;
 }
@@ -130,11 +195,20 @@
   .measures {
     margin-left: 3vh;
   }
+
+   .final {
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+  }
 }
 
 @media (max-width: 600px) {
   .measures {
     margin-left: 2vh;
+  }
+
+  .btn-measures {
+    width: 3.5vh;
   }
 
   #btn-data {
@@ -148,5 +222,18 @@
   .calc-meteo {
     padding-left: 1.5vh;
     padding-right: 1.5vh;
+  }
+
+  .user-font {
+    font-size: 1.4vh;
+  }
+
+  .credits {
+    font-size: 1.5vh;
+  }
+
+  .final {
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
   }
 }
