--- a/src/info.css
+++ b/src/info.css
@@ -187,6 +187,51 @@
   opacity: 0;
 }
 
+.log-error {
+  position: absolute;
+  padding-left: 5vh;
+}
+
+.error {
+  font-family: "sf-pro", sans-serif;
+  font-size: 2.2vh;
+  font-weight: 500;
+  padding: 2vh 4vh 2vh 4vh;
+  border-radius: 5vh;
+  background: black;
+  color: rgba(255, 255, 255, 0.65);
+  border: none;
+  opacity: 0;
+}
+
+.error-change {
+  opacity: 0.7;
+  transition: all 1s;
+}
+
+.error-hidden {
+  opacity: 0;
+  transition: all 1s;
+}
+
+@keyframes fadeIn-FadeOut {
+  10% {
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 .hidden {
   display: none;
 }
@@ -199,6 +244,10 @@
    .final {
     display: grid;
     grid-template-columns: 20% 60% 20%;
+  }
+
+  .error-change {
+    opacity: 1;
   }
 }
 
@@ -235,5 +284,9 @@
   .final {
     display: grid;
     grid-template-columns: 20% 60% 20%;
+  }
+
+  .error-change {
+    opacity: 1;
   }
 }
